syntax = "proto3";

package ra2yrproto.commands;

import "ra2yrproto/ra2yr.proto";

enum UnitAction {
  ACTION_NONE = 0;
  ACTION_DEPLOY = 1;
  ACTION_SELECT = 2;
  ACTION_UNSELECT = 3;
  ACTION_TRY_TO_DEPLOY = 4;
  ACTION_SELL = 5;
}

message CreateHooks {
  message Args {}
  message Result {}
  Args args = 1;
  Result result = 2;
}

message CreateCallbacks {
  message Args {}
  message Result {}
  Args args = 1;
  Result result = 2;
}

message GetGameState {
  message Args {}
  message Result {
    ra2yrproto.ra2yr.GameState state = 1;
  }
  Args args = 1;
  Result result = 2;
}

message GetTypeClasses {
  message Args {}
  message Result {
    repeated ra2yrproto.ra2yr.ObjectTypeClass classes = 1;
  }
  Args args = 1;
  Result result = 2;
}

message GetHouses {
  message Args {}
  message Result {
    repeated ra2yrproto.ra2yr.House houses = 1;
  }
  Args args = 1;
  Result result = 2;
}

message DeployUnits {
  message Args {
    repeated uint32 object_addresses = 1;
  }
  message Result {}
  Args args = 1;
  Result result = 2;
}

message UnitCommand {
  message Args {
    repeated uint32 object_addresses = 1;
    UnitAction action = 2;
  }
  message Result {}
  Args args = 1;
  Result result = 2;
}

message ClickEvent {
  message Args {
    repeated uint32 object_addresses = 1;
    ra2yrproto.ra2yr.NetworkEvent event = 2;
  }
  message Result {}
  Args args = 1;
  Result result = 2;
}